--- a/.github/workflows/buildndeploy.yml
+++ b/.github/workflows/buildndeploy.yml
@@ -18,6 +18,7 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: main.tex
+          args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape
           post_compile: mv main.pdf index.pdf
 
       - name: Upload PDF file
