Fix pathname in upload

--- a/.github/workflows/buildndeploy.yml
+++ b/.github/workflows/buildndeploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: PDF
-          path: main.pdf
+          path: index.pdf
 
   deploy:
     # Add a dependency to the build job
