--- a/.github/workflows/buildndeploy.yml
+++ b/.github/workflows/buildndeploy.yml
@@ -19,13 +19,10 @@ jobs:
         with:
           root_file: main.tex
           args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape
-          post_compile: mv main.pdf index.pdf
+          post_compile: mkdir _site/ && mv main.pdf _site/index.pdf
 
       - name: Upload PDF file
-        uses: actions/upload-artifact@v3
-        with:
-          name: PDF
-          path: index.pdf
+        uses: actions/upload-pages-artifact@v3
 
   deploy:
     # Add a dependency to the build job
